# pkg/models/class.go
@@ -8,14 +8,16 @@ import (
 
 type Class struct {
 	UUIDPrimaryKey
-	Name         string    `json:"name" gorm:"index:idx_class_name_school,unique;not null"`
-	SchoolID     *string   `json:"school_id,omitempty" gorm:"type:uuid;index:idx_class_name_school,unique"`
-	School       *School   `json:"school,omitempty" gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;foreignKey:SchoolID;references:ID"`
-	Level        string    `json:"level" gorm:"type:varchar(20);not null"`
-	Homeroom     string    `json:"homeroom"`
-	AcademicYear string    `json:"academic_year" gorm:"type:varchar(20);not null"`
-	CreatedAt    time.Time `json:"created_at" gorm:"autoCreateTime"`
-	UpdatedAt    time.Time `json:"updated_at" gorm:"autoUpdateTime"`
+	Name         string      `json:"name" gorm:"index:idx_class_name_school,unique;not null"`
+	SchoolID     *string     `json:"school_id,omitempty" gorm:"type:uuid;index:idx_class_name_school,unique"`
+	School       *School     `json:"school,omitempty" gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;foreignKey:SchoolID;references:ID"`
+	Level        string      `json:"level" gorm:"type:varchar(20);not null"`
+	Homeroom     string      `json:"homeroom"`
+	AcademicYear string      `json:"academic_year" gorm:"type:varchar(20);not null"`
+	CurriculumID *string     `json:"curriculum_id,omitempty" gorm:"type:uuid;index"`
+	Curriculum   *Curriculum `json:"curriculum,omitempty" gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;foreignKey:CurriculumID;references:ID"`
+	CreatedAt    time.Time   `json:"created_at" gorm:"autoCreateTime"`
+	UpdatedAt    time.Time   `json:"updated_at" gorm:"autoUpdateTime"`
 }
 
 func (c *Class) BeforeCreate(_ *gorm.DB) error { c.ID = ensureUUID(c.ID); return nil }
@@ -26,6 +28,7 @@ type CreateClass struct {
 	Homeroom     string  `json:"homeroom"`
 	AcademicYear string  `json:"academic_year" binding:"required"`
 	SchoolID     *string `json:"school_id"`
+	CurriculumID *string `json:"curriculum_id"`
 }
 
 type UpdateClass struct {
@@ -34,4 +37,5 @@ type UpdateClass struct {
 	Homeroom     string  `json:"homeroom"`
 	AcademicYear string  `json:"academic_year"`
 	SchoolID     *string `json:"school_id"`
+	CurriculumID *string `json:"curriculum_id"`
 }
